src/css/style.css
body, html, #root, .layoutContainer  {
  height: 100%;
  width:100%;
  overflow: hidden;
}

body {
  background-image: url('http://25.media.tumblr.com/tumblr_m81bemWVEN1ra7exvo1_1280.jpg');
  background-position: center center;
  background-size: cover;
}


/*Mobile First Approach*/

img {
  width:100%;
}

.userName {
  position: fixed;
  right:1em;
  top:5em;
  display: none;
  padding:3.5em;
  align-items: flex-end;
}

.userNameText {
  color:white;
  z-index:10;
  padding:0.5em;
  background-color: rgba(0,0,0,.5);
}

.userNameImage {
  position: absolute;
  margin:auto;
  left:0;
  right:0;
  max-width: 12em;
}

h1 {
  text-align: center;
  font-size: 170%;
  color:white;
}

div.animeSquare h4 {
  text-align: center;
  color:white;
  background: rgba(0,0,0,.5);
  margin:0;
}

.hamtitleContainer {
  display: flex;
  justify-content: space-between;
}

.title, .hamburgerBtn {
  display: inline-block;
  color:white;
  padding: .1em 1em;
}

.navItemsContainer {
  display: flex;
  flex-flow: row wrap;
  width: 80%;
  margin:auto;
}

li.linkItem {
  display: flex;
  width: 100%;
  justify-content: center;
}

.linkImg {
  padding: .5em;
  width: 5em;
  height: 5em;
}

a.link {
  display: flex !important;
  align-items: center;
  font-size: 130%;
}
.componentContainer {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  background-image: url('http://orig14.deviantart.net/c40a/f/2014/188/a/2/goku_super_saiyan_god_by_bardocksonic-d7ppcr2.png');
  background-size: 25%;
  background-position: center bottom;
  background-repeat: no-repeat;
}

.layoutContainer {

  overflow: auto;
  display: flex;
  flex-direction: column;

}

.homeContainer {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
}

.form-control.searchBar {
  margin: 1em auto;
}

.animeIntroContainer {
  display: flex;
  flex-direction: column;
  padding: 2em;
  color: black;
  max-width: 30em;
}

/*SignIn Modal*/

#myModal {
  display: flex;
  justify-content: center;
  align-items: center;
}

.modal.fade {
  z-index: -1;
}

.modal.fade.in {
  z-index: 10000;
}

.modal-dialog {
  width: 100%;
  max-width: 40em;
}

.googleSignBtn {
  background-image: url('/assets/btn_google_dark_normal_ios.svg');
  /*background-image: url('google-sign-in.png');*/
  background-position: center;
}

.signBtn {
  margin:1.2em 1em 0;
  color:white;
  background-color: darkslategrey;
}

.modal-content.thirdLevelModal {
  background-color:teal;
  color:white;
}

form {
  text-align: center;
}

.form-control {
  margin: auto;
  max-width: 18em;
}


/*AnimeModal*/
#animeModalMain {
  display: flex !important;
  justify-content: center;
}

.modalPicContainer {
  padding:1em;
}

.modalPic {
  width: 50%;
}

h3.headings.title {
  display: block;
}

.animeInfoContainer {
  display: flex;
  flex-direction: column ;
  align-items: center;

}

.animeInfo {
  display: flex;
  align-self: flex-start;
  flex-direction: column;
}

.animeModalClose {
  position: fixed;
  top:-1em;
  right:0;
  color:white;
  display: inline-block;
  font-size:150%;
  padding:1em;
  z-index: 10000;
}

.playerContainer {
  display: flex;
}

#player {
  width: 100%;
}


/*animeSquares*/
.compContainer {
  display: flex;
  flex-flow: row wrap;
}

.encloser {
  width:50%;
  margin:auto;
  padding:1em;
  max-width: 13em;
}

.summary {
  letter-spacing: 1px;
  line-height: 1.4em;
}

@media screen and (min-width: 768px) {
  h1 {
    margin-top: 2em;
  }


  .compContainer {
    margin-top: 3.5em;
  }

  .layoutContainer {
    flex-direction: row;
  }

  .navbarContainer {
    height:100%;
    width:32%;
    max-width: 16.5em;
  }

  .navItemsContainer {
    width: 100%;
  }

  .navbar {
    height: 100%;
  }

  #myNavbar {
    padding: 0;
  }

  .layoutContainer {
    overflow:hidden;
  }

  .componentContainer {
    flex-grow: 2;
    overflow: auto;
  }

  .homeContainer {
      align-items: center;
  }

  .animeIntroContainer {
    background-color: rgba(255,255,255,.7);
    margin-top: -15em;
  }

  .encloser {
    max-width: 16em;
  }

  .genreContainer{
    display: flex;
    flex-flow: row wrap;
    alignment-baseline: stretch;
    width: 100%;
    align-items: baseline;
    justify-content: flex-start;
  }

  div.genreContainer h5 {
    border: 1px solid black;
    padding:.2em;
    margin:.2em;
  }

  .animeSquare:hover {
    transform: scale(1.1);
    box-shadow: black 0 0 1em;
    transition: all .5s;
  }



}

@media screen and (min-width: 992px) {

  #animeModalMain {
    height: 100%;
    overflow: hidden;
  }

  .modal-dialog {
    max-width: 90em;
  }

  .modalPicContainer {
    display: flex;
  }

  .playerContainer {
    width: 50%;
    align-items: center;
  }

  .modalPicContainer {
    height: 100%;
  }

  .modal-content.thirdLevelModal {
    height: 100%;
  }

  .animeInfoContainer {
    width: 50%;
    flex-flow: row wrap;
    overflow: auto;
  }

  .animeInfo {
    width: 100%;
  }

  .animeTitle {
    width: 40%;
    margin:auto;
  }

  .btnContainer {
    width: 61%;
    margin:auto;
  }

  .userName {
    display: flex;
  }


}

